# my-openenv

./: .gitignore  Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  smoke_test.py  verify_graders.py
server/: app.py  environment.py  tasks.py
