[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-debug-env"
version = "1.0.0"
description = "OpenEnv SQL Query Debugging Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "openenv-core>=0.2.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
server = "server.app:main"
